# sydney-realestate

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_named_constraints.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: admin.py  properties.py  suburbs.py  valuations.py  watchlist.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  ingestion_log.py  osm.py  property.py  suburb.py  valuation.py  valuer_general.py  watchlist.py
backend/app/ingestion/: base.py  compute_suburb_stats.sql  coordinator.py  domain_api.py  homely_scraper.py  nsw_sales.py  onthehouse_scraper.py  osm_enricher.py  seed_data.py  suburb_geocoder.py  valuer_general.py  vg_matcher.py
backend/app/ml/: evaluation.py  features.py  model.py  predictor.py  trainer.py  tuner.py
backend/app/repositories/: base.py  property_repo.py  suburb_repo.py  valuation_repo.py  watchlist_repo.py
backend/app/schemas/: property.py  watchlist.py
backend/app/seeds/: seed_suburbs.py  sydney_suburbs.json
backend/app/tasks/: beat_schedule.py  celery_app.py  ingestion_tasks.py  ml_tasks.py
backend/app/utils/: cache.py  geo.py  logger.py
backend/tests/: conftest.py
backend/tests/test_api/: test_admin.py  test_properties.py  test_suburbs.py  test_watchlist.py
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/lib/: api.ts  (+2 more)
nginx/: nginx.conf
(+33 files in other folders)
