[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "sydney-realestate-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "greenlet>=3.0",

    # HTTP
    "httpx>=0.27",

    # Task queue
    "celery[redis]>=5.4",
    "redis>=5.0",
    "flower>=2.0",

    # ML
    "xgboost>=2.0",
    "scikit-learn>=1.5",
    "shap>=0.45",
    "pandas>=2.2",
    "numpy>=1.26",
    "joblib>=1.4",
    "optuna>=3.6",

    # Data processing
    "rapidfuzz>=3.9",
    "beautifulsoup4>=4.12",

    # Logging
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
